# lh-munihac2020

./: .gitignore  README.md  hie.yaml  lh-munihac2020.cabal  stack.yaml
src/: Induction.hs  Tutorial.hs
