cabal-version: 2.0
name: lh-munihac2020
version: 0.1
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Tutorial
  ghc-options:
    -fplugin=LiquidHaskell
  build-depends:
    liquidhaskell >= 0.8.10 && < 0.8.12,
    liquid-base >= 4.14.0 && < 4.14.2,
    liquid-containers >= 0.6.2.1 && < 0.6.3

